--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "symfony/maker-bundle": "^1.0",
         "symfony/monolog-bundle": "^3.0",
         "symfony/phpunit-bridge": "^5.1",
+        "symfony/requirements-checker": "^1.1",
         "symfony/stopwatch": "^5.1",
         "symfony/twig-bundle": "^5.1",
         "symfony/var-dumper": "^5.1",
@@ -80,7 +81,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "requirements-checker": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
